[gd_scene load_steps=11 format=3 uid="uid://b8deqcao3lufg"]

[ext_resource type="Script" uid="uid://bs1cuoj33tb4f" path="res://Scripts/Teleportor.gd" id="1_pord8"]
[ext_resource type="Texture2D" uid="uid://dl1fjay6hyf60" path="res://Assets/TileSets/TX Props.png" id="2_x7otx"]
[ext_resource type="Texture2D" uid="uid://xrj7wyebcjr5" path="res://Assets/Sprites/UI/Teleport_Ray.png" id="2_xio6j"]
[ext_resource type="Texture2D" uid="uid://dxbq6nq0p1gy2" path="res://Assets/TileSets/TX Shadow.png" id="3_uh1ts"]
[ext_resource type="AudioStream" uid="uid://cwhsv0oijtcgw" path="res://Assets/Sounds/teleporter.mp3" id="5_rfbas"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wypd7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3ktfx"]
texture = ExtResource("2_x7otx")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
3:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
14:0/0 = 0
1:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
14:1/0 = 0
3:2/0 = 0
5:2/0 = 0
7:2/0 = 0
9:2/0 = 0
10:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
14:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
5:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
12:4/0 = 0
14:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
7:5/0 = 0
9:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
11:6/0 = 0
13:6/0 = 0
3:7/0 = 0
5:7/0 = 0
7:7/0 = 0
9:7/0 = 0
11:7/0 = 0
13:7/0 = 0
7:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
5:9/0 = 0
7:9/0 = 0
9:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
5:10/0 = 0
7:10/0 = 0
9:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
5:11/0 = 0
13:11/0 = 0
14:11/0 = 0
13:12/0 = 0
14:12/0 = 0
0:13/0 = 0
1:13/0 = 0
0:14/0 = 0
1:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0

[sub_resource type="TileSet" id="TileSet_crb8x"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_3ktfx")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_awpx1"]
texture = ExtResource("3_uh1ts")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
12:0/0 = 0
13:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
3:2/0 = 0
4:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
7:4/0 = 0
8:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
9:5/0 = 0
10:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
3:7/0 = 0
5:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
15:8/0 = 0
5:9/0 = 0
7:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
15:10/0 = 0
5:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
13:12/0 = 0
14:12/0 = 0
0:13/0 = 0
1:13/0 = 0
0:14/0 = 0
1:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0

[sub_resource type="TileSet" id="TileSet_sot64"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_awpx1")

[node name="Node2D" type="Node2D"]
position = Vector2(-16, 15)
script = ExtResource("1_pord8")
active = true

[node name="LightPillar" type="Sprite2D" parent="."]
z_index = 20
position = Vector2(16, -153.5)
scale = Vector2(1e-05, 4.391)
texture = ExtResource("2_xio6j")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(16, -15)
scale = Vector2(4.62, 2.96)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_wypd7")

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource("TileSet_crb8x")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 720896, 8, -1, 720896, 9, 65535, 720896, 10, -131072, 786432, 8, -65536, 786432, 9, 0, 786432, 10, -131071, 851968, 8, -65535, 851968, 9, 1, 851968, 10)

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_sot64")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 720896, 8, -1, 720896, 9, 65535, 720896, 10, -131072, 786432, 8, -65536, 786432, 9, 0, 786432, 10, -131071, 851968, 8, -65535, 851968, 9, 1, 851968, 10)

[node name="Lights" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1

[node name="Up" type="Sprite2D" parent="Lights"]
position = Vector2(16.5, -45.5)
texture = ExtResource("2_x7otx")
region_enabled = true
region_rect = Rect2(337, 266, 5, 5)

[node name="Right" type="Sprite2D" parent="Lights"]
position = Vector2(55.5, -18.5)
texture = ExtResource("2_x7otx")
region_enabled = true
region_rect = Rect2(337, 273, 5, 5)

[node name="Left" type="Sprite2D" parent="Lights"]
position = Vector2(-22.5, -18.5)
texture = ExtResource("2_x7otx")
region_enabled = true
region_rect = Rect2(330, 266, 5, 5)

[node name="Down" type="Sprite2D" parent="Lights"]
position = Vector2(16.5, 8.5)
texture = ExtResource("2_x7otx")
region_enabled = true
region_rect = Rect2(330, 273, 5, 5)

[node name="Position" type="Node2D" parent="."]
position = Vector2(16, -16)

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="PhaseTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnProtectionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="TeleportSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rfbas")
volume_db = -5.0
bus = &"SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
